# ankiweb

./: .gitignore  README.md  THIRD-PARTY-NOTICES.md  UPSTREAM.md  package-lock.json  package.json  pyproject.toml
ankiweb/: __init__.py  __main__.py  app.py  assets.py  auth.py  collection_service.py  config.py  i18n.py  import_tmp.py  notifier.py
ankiweb/anki_rpc/: __init__.py  handlers.py  passthrough.py
ankiweb/ankiconnect/: __init__.py  app.py  config.py  cors.py  dispatch.py  registry.py  rest.py  runtime.py
ankiweb/bridge/: hub.py  protocol.py  ui_state.py  ws.py
ankiweb/screens/: about.py  add.py  browser.py  card_layout.py  congrats.py  custom_study.py  deckbrowser.py  editor.py  export.py  fields.py  filtered_deck.py  notetypes.py  notify.py  overview.py  page.py  preferences.py  preview.py  reviewer.py  routes.py  tools.py  type_answer.py
ankiweb/shell/: index.html  reviewer_spike.html
shell_src/: bootstrap.ts  pycmd_shim.ts
tests/: conftest.py  test_add.py  test_add_integration.py  test_allowed_hosts.py  test_anki_rpc.py  test_assets_present.py  test_assets_serving.py  test_auth.py  test_bridge_hub.py  test_bridge_spike.py  test_browser.py  test_browser_integration.py  test_card_info.py  test_card_layout.py  test_change_notetype.py  test_change_notetype_integration.py  test_collection_service.py  test_collection_service_lang.py  test_config_lang.py  test_custom_study.py  test_custom_study_integration.py  test_deck_options.py  test_deck_options_integration.py  test_deckbrowser.py  test_deckbrowser_nav.py  test_editor.py  test_editor_integration.py  test_export.py  test_export_integration.py  test_fields.py  test_filtered_deck.py  test_filtered_deck_integration.py  test_fsrs_concurrency.py  test_global_toolbar.py  test_graphs.py  test_graphs_browserlink.py  test_graphs_integration.py  test_i18n.py  test_i18n_screens.py  test_image_occlusion.py  (+32 more)
tests/ankiconnect/: test_app.py  test_card_actions.py  test_config.py  test_config_env.py  test_cors.py  test_deck_actions.py  test_dispatch.py  test_extra_actions.py  (+10 more)
tools/: build_shell.mjs  fetch_web_assets.py
(+71 files in other folders)
