[project]
name = "ankiweb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anki==25.9.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12",  # uvicorn needs a WS library for real /ws connections (the bridge)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "playwright>=1.44"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ankiweb*"]
