[project]
name = "ankiweb"
version = "0.1.0"
requires-python = ">=3.12"
# Derivative of Anki (AGPL-3.0-or-later) + AnkiConnect (GPL-3.0-or-later); the combined
# work is AGPL-3.0-or-later. See LICENSE + THIRD-PARTY-NOTICES.md.
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*", "THIRD-PARTY-NOTICES.md"]
authors = [{ name = "tsc", email = "xxj.tan@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "anki==25.9.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12",  # uvicorn needs a WS library for real /ws connections (the bridge)
    "httpx>=0.27",
    "python-multipart>=0.0.9",  # FastAPI UploadFile (the /upload_media paste-image endpoint)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "playwright>=1.44"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ankiweb*"]
